--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberSaathi - Advanced Scam Detection</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <!-- Dynamic Background -->
@@ -346,6 +346,6 @@
         </div>
     </footer>
 
-    <script src="../static/script.js"></script>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
