Update back site

--- a/app/templates/base_in.html
+++ b/app/templates/base_in.html
@@ -1,10 +1,10 @@
-<!-- base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}CyberSaathi{% endblock %}</title>
+    <title>{% block title %}CyberBandu{% endblock %}</title>
       <link rel="stylesheet" href="{% static 'css/signin_up.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="left-section">
             <div class="logo">
-                <h1>CyberSaathi</h1>
+                <h1>CyberBandu</h1>
                 <p>Your Digital Companion</p>
             </div>
         </div>
